--- a/style.css
+++ b/style.css
@@ -25,8 +25,14 @@ body {
   width: 100%;
 }
 
+body {
+  background: url('imgs/background.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 span { 
-  color: #5FCF80;
+  color: #C92F25;
   font-family: monospace;
   white-space: nowrap;
 }
@@ -51,19 +57,35 @@ span:focus {
   color: #8D9AA5;
   text-align: center;
   padding: 1em 2.5em;
+  padding-bottom: 5em;
   width: 60%;
 }
 
 h1 { 
-  color: #5FCF80;
+  color: #D25252;
   font-family: 'Oswald', sans-serif;
   font-size: 1.4em;
   font-size: 7vw;
-  line-height: 1.2;
-  margin: 0.5em 0 3em;
+  line-height: 1.4;
+  margin: 0.2em 0 2em;
   text-shadow: 1px 1px 1px #fefefe;
 }
 
+/* IMG STYLE */
+.main-content {
+  margin: 0 auto;
+  width: 500px;
+  max-width: 100%;
+}
+
+.main-img {
+  max-width: 100%;
+  border: 1px solid #4D4F53;
+  padding: 10px;
+  cursor: crosshair;
+}
+
+/* @MEDIA */
 @media (min-width: 1075px) {
   h1 { 
     font-size: 3em; 
