--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ body {
 }
 
 body {
-  background: url('imgs/background.jpeg');
-  background-repeat: no-repeat;
+  background: url('imgs/background.jpeg') no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -73,7 +72,7 @@ h1 {
 
 /* IMG STYLE */
 .main-content {
-  margin: 0 auto;
+  margin: 0 auto 50px;
   width: 500px;
   max-width: 100%;
 }
@@ -81,30 +80,8 @@ h1 {
 .main-img {
   max-width: 100%;
   border: 1px solid #4D4F53;
+
   padding: 10px;
   cursor: crosshair;
 }
 
-/* @MEDIA */
-@media (min-width: 1075px) {
-  h1 { 
-    font-size: 3em; 
-    padding-top: 50px;
-  }
-}
-
-pre {
-  background: #fff;
-  display: inline-block;
-  font-size: .55em;
-  margin-top: 2em;
-  padding: 1em;
-}
-
-@media (min-width: 360px) {
-  pre { font-size: .7em; }
-}
-
-@media (min-width: 500px) {
-  pre { font-size: 1em; }
-}
