--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h1 {
 
 .main-img {
   max-width: 100%;
-  border: 1px solid #4D4F53;
+  border: 1px solid #E0E1E6;
 
   padding: 10px;
   cursor: crosshair;
