--- a/tooltip.css
+++ b/tooltip.css
@@ -17,7 +17,7 @@
 .tool:hover::before,
 .tool:focus::before,
 .tool:hover::after,
-.tool:focus::before {
+.tool:focus::after {
   opacity: 1;
   z-index: 100;
   /*transform: scale(1) translateY(0);*/
